# ai-policy

./: .gitignore  README.md  pyproject.toml
.cursor/skills/commit-and-push-with-tests/: SKILL.md
app/: __init__.py  bootstrap.py
app/api/: main.py
app/config/: runtime.yaml  tools.yaml
app/economics/: __init__.py  budget_guard.py  cost_tracker.py
app/evaluation/: __init__.py  harness.py
app/models/: __init__.py  audit.py  common.py  economics.py  invoice.py  policy.py  risk.py  tool.py  workflow.py
app/observability/: __init__.py  summary.py
app/policy/: __init__.py  approval.py  engine.py  risk_engine.py  rules.py
app/runtime/: __init__.py  execution_context.py  orchestrator.py  state_machine.py  workflow_runner.py
app/services/: __init__.py  audit_logger.py  config_loader.py  run_store.py
app/tools/: base.py  definitions.py  registry.py
docs/: EXPLAINED.md  architecture.md  business_summary.md  governance-model.md  phase1-decisions.md
docs/portfolio/: linkedin_post_draft.md  medium_article_draft.md  upwork_case_study_summary.md
examples/: invoice_workflow_request.yaml  invoice_workflow_response.yaml
scripts/: generate_runtime_summary.py  run_api.py  run_invoice_example.py  run_phase2_evaluation.py  validate_week1.py
tests/fixtures/: sample_policy.yaml  sample_workflow_request.json
tests/integration/: test_invoice_workflow_end_to_end.py
tests/unit/: test_cost_tracker.py  test_evaluation_harness.py  test_observability_summary.py  test_orchestrator_invoice_flow.py  test_phase2_governance.py  test_policy_engine.py  test_tool_registry.py
(+8 files in other folders)
